# asyncpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  async__generator_8h_source.html  async__main_8h.html  async__main_8h__incl.map  async__main_8h__incl.md5  async__main_8h_source.html  channel_8h_source.html  classasyncpp_1_1async__generator-members.html  classasyncpp_1_1async__generator.html  classasyncpp_1_1async__launch__scope-members.html  classasyncpp_1_1async__launch__scope.html  classasyncpp_1_1async__launch__scope.js  classasyncpp_1_1atomic__ref-members.html  classasyncpp_1_1atomic__ref.html  classasyncpp_1_1atomic__ref.js  classasyncpp_1_1channel-members.html  classasyncpp_1_1channel.html  classasyncpp_1_1channel.js  classasyncpp_1_1dispatcher-members.html  classasyncpp_1_1dispatcher.html  classasyncpp_1_1dispatcher.js  classasyncpp_1_1dispatcher__inherit__graph.map  classasyncpp_1_1dispatcher__inherit__graph.md5  classasyncpp_1_1fiber-members.html  classasyncpp_1_1fiber.html  classasyncpp_1_1fiber.js  classasyncpp_1_1fiber_3_01void_01_4-members.html  classasyncpp_1_1fiber_3_01void_01_4.html  classasyncpp_1_1fiber_3_01void_01_4.js  classasyncpp_1_1generator-members.html  classasyncpp_1_1generator.html  classasyncpp_1_1generator.js  (+226 more)
.github/actions/badge/: action.yml  write-json-object.js  write-json-object.sh
.github/actions/badge/publish/: action.yml
.github/actions/badge/write/: action.yml
.github/actions/install/gtest/: action.yml
.github/actions/process-linting-results/: action.yml
.github/scripts/: add-newline-if-missing.sh
.github/workflows/: cmake.yml  compiler-support.yml  documentation.yml  lint.yml
cmake/: asyncpp-config.cmake.in
compiler/macos-11_clang-13/: shields.json
compiler/macos-11_clang-14/: shields.json
compiler/macos-11_clang-15/: shields.json
compiler/macos-11_gcc-10/: shields.json
compiler/macos-11_gcc-11/: shields.json
compiler/macos-12_clang-14/: shields.json
compiler/macos-12_clang-15/: shields.json
compiler/macos-12_gcc-11/: shields.json
compiler/macos-13_clang-15/: shields.json
compiler/macos-14-arm_clang-15/: shields.json
compiler/macos-15-arm_clang-18/: shields.json
compiler/ubuntu-2004_clang-10/: shields.json
compiler/ubuntu-2004_clang-11/: shields.json
compiler/ubuntu-2004_clang-12/: shields.json
compiler/ubuntu-2004_gcc-10/: shields.json
compiler/ubuntu-2204_clang-12/: shields.json
compiler/ubuntu-2204_clang-13/: shields.json
compiler/ubuntu-2204_clang-14/: shields.json
compiler/ubuntu-2204_clang-15/: shields.json
compiler/ubuntu-2204_gcc-10/: shields.json
compiler/ubuntu-2204_gcc-11/: shields.json
compiler/ubuntu-2404_clang-16/: shields.json
compiler/ubuntu-2404_clang-17/: shields.json
compiler/ubuntu-2404_clang-18/: shields.json
compiler/ubuntu-2404_gcc-12/: shields.json
compiler/ubuntu-2404_gcc-13/: shields.json
compiler/ubuntu-2404_gcc-14/: shields.json
compiler/windows-2019_msvc16/: shields.json
compiler/windows-2022_msvc17/: shields.json
compiler/windows-2025_msvc17/: shields.json
docs/: CMakeLists.txt  Doxyfile.in
include/asyncpp/: async_generator.h  async_main.h  channel.h  defer.h  dispatcher.h  event.h  fiber.h  fire_and_forget.h  generator.h  latch.h  launch.h  mutex.h  policy.h  promise.h  ptr_tag.h  queue.h  ref.h  scope_guard.h  signal.h  simple_dispatcher.h  stop_token.h  sync_wait.h  task.h  thread_pool.h  threadsafe_queue.h  timer.h
include/asyncpp/detail/: concepts.h  parameter_pack.h  promise_allocator_base.h  sanitizers.h  std_import.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  concepts_0.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  (+29 more)
src/: dispatcher.cpp
test/: CMakeLists.txt  async_generator.cpp  channel.cpp  debug_allocator.h  defer.cpp  event.cpp  fiber.cpp  fire_and_forget.cpp  generator.cpp  launch.cpp  mutex.cpp  promise.cpp  ptr_tag.cpp  queue.cpp  ref.cpp  scope_guard.cpp  signal.cpp  so_compat.cpp  task.cpp  thread_pool.cpp  timer.cpp
